Fixed error with index.html of not being able to press create user button on narrow screens

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,6 +1,7 @@
 #header_create_user {
     display: flex;
     justify-content: right;
+    z-index: 1;
 }
 
 #header_create_user a {
